src/styles/imports/_overlay.scss
.right-overlay-wrapper {
    overflow: hidden;
    height: 100%;
}


/*** This div prevents users from using the map before pressing enter-button ***/

#overlay-div {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 10; // lower than enter-button
}


/*** How long the transition from overlay to map takes ***/

$overlayTransition: 1.4s;

/*** Button and borders hug the bottom left corner. ***/

.enter-button-shared {
    left: 0;
    bottom: 0;
    transition: $overlayTransition;
}


/*** The button that sends the overlay off screen ***/

#enter-button {
    position: absolute;
    z-index: 13; // Unnecessairly high.
    width: 40%;
    height: 50%;
    @extend .enter-button-shared;
    @extend .button-style;
    padding-top: 0.8em;
    p {
        font-size: 2em;
        position: relative;
        top: 40%; // Text appears roughly in the center of enter-button
        font-weight: bold;
    }
}


/*** Graphic above the enter-button to signify loading. ***/

#load-button {
    position: absolute;
    z-index: 14; // Higher than enter-button
    width: 40%;
    height: 50%;
    @extend .enter-button-shared;
}


/*** Part of graphic that moves around the load-button ***/

#load-mover {
    z-index: 15; // higher than load-button
    width: 2em;
    height: 2em;
    top: 0;
    right: 100%;
    background: black;
    transition: 1s;
}

#load-mover.first-move {
    width: 100%;
}

#load-mover.second-move {
    height: 100%;
}

#load-mover.third-move {
    background: white;
}

#load-mover.fourth-move {
    opacity: 0;
}

#load-button.fourth-move {
    opacity: 0;
}


/*** The first border around the enter-button. ***/

.enter-button-border1 {
    @extend .enter-button-shared;
    position: absolute;
    z-index: 12; // Below enter-button
    width: 50%; // Bigger than enter button
    height: 60%;
}


/*** Second border around the enter-button ***/

.enter-button-border2 {
    @extend .enter-button-shared;
    position: absolute;
    z-index: 11; // Below border1
    width: 60%; // BIgger than border 1
    height: 70%;
}


/*** The title of the website. Positioning is handled word by word below. ***/

.title-text {
    z-index: 5; // above map, below display-div
    position: absolute;
    text-transform: uppercase;
    margin-top: 2%;
    transition: $overlayTransition;
}


/*** Positioning the word 'Theatre' in the title ***/

.title-theatre {
    font-size: 3em;
    left: 0.35em;
}


/*** Positioning the word 'in' in the title ***/

.title-in {
    font-size: 2em; // Smaller than theatre and toronto
    left: 7.9em;
    top: 0.4em;
}


/*** Positioning the word 'Toronto' in the title ***/

.title-toronto {
    font-size: 3em;
    top: 1.1em; // Below 'theatre' and 'in'
    left: 2em;
}


/*** Right side of the overlay ***/

.right-overlay {
    transition: $overlayTransition;
    position: absolute;
    right: 0;
    height: 100%;
    width: 40%;
    z-index: 11;
}


/*** When the overlay is off, the right side moves its width over ***/

.right-overlay.overlay-off {
    right: -40%;
    .right-overlay-wrapper {
        width: 0;
    }
}


/*** When the overlay is off, border1 goes farther than its width, this 
is done to create a visual effect where the divs follow one another as some move
faster than others. ***/

.enter-button-border1.overlay-off {
    left: -60%;
}


/*** When the overlay is off, border2 goes farther than its width, this 
is done to create a visual effect where the divs follow one another as some move
faster than others. ***/

.enter-button-border2.overlay-off {
    left: -80%;
}


/*** When the overlay is off, enter-button goes off screen the same distance 
that its width is equal to. ***/

#enter-button.overlay-off {
    left: -40%;
}


/*** When the overlay is off, the word 'Toronto' joins the other title words in
a line. ***/

.title-toronto.overlay-off {
    top: 0;
    left: 6.1em;
}


/*** Fade out button when the javascript is not yet loaded ***/

#enter-button.button-disabled {
    cursor: auto;
    background: gray;
}


/*** For non-wide screens ***/

@media all and (max-width: 72em) {
    .enter-button-border2 {
        opacity: 0; // Outermost border no longer present
    }
    .enter-button-border1 {
        width: 60%; // First border takes position of outermost border
        height: 70%;
    }
    /*** Hide the title 'Theatre in Toronto' behind the display div at all
    times. ***/
    .title-toronto.overlay-off {
        top: 1.1em;
        left: 1em;
    }
    .enter-button-border1.overlay-off {
        left: -80%; // Border1 moves like border2 does on larger displays
    }
}


/*** Small desktops or tablets roughly. This media query only exists to make 
transitions when RESIZING look prettier, so it's rarely used. ***/

@media all and (max-width: 62em) {
    .enter-button-border1 {
        width: 100%; // First border takes position of outermost border
        height: 70%;
    }
    #enter-button {
        width: 80%; // Increase button size to old border1 size. 
        height: 60%;
    }
    #load-button {
        width: 80%; // Increase button size to old border1 size. 
        height: 60%;
    }
    #enter-button.overlay-off {
        left: -50%; // Need to move own width over
    }
    .right-overlay {
        right: -40%;
        visibility: hidden;
    }
    .right-overlay-wrapper {
        width: 0; // Don't allow wrapper to be clickable when right-overlay is gone
    }
}


/*** Phablet size roughly ***/

@media all and (max-width: 50em) {
    .enter-button-border1 {
        opacity: 0;
    }
    #enter-button {
        width: 100%;
        height: 70%; // Take position that border1 used to have
    }
    #load-button {
        width: 100%; // Take position that border1 used to have
        height: 70%;
    }
    #enter-button.overlay-off {
        left: -60%; // Need to move own width over
    }
}


/*** Small screens ***/

@media all and (max-width: 40em) {
    #enter-button {
        width: 100%;
    }
    #load-button {
        width: 100%;
    }
    #enter-button.overlay-off {
        left: -100%;
    }
    // .title-theatre {
    //     left: 0.5em; // Move slightly left to avoid covering tabs.
    // }
    // .title-in {
    //     left: 8.25em; // Move slightly left to avoid covering tabs.
    // }
    // .title-toronto {
    //     left: 1.5em; // Move slightly left to avoid covering tabs.
    // }
}


/*** This is generally for landscape view on phones. ***/

@media all and (max-height: 26em) {
    .title-toronto {
        top: 0; // Keep 'Toronto' on same level as the rest of the title
        left: 6.1em; // Move slightly left to avoid covering tabs.
    }
}

